# proiect-pcd

./: .gitignore  CMakeLists.txt  CerinteFunctionale.md  README.md  build.sh
client/: CMakeLists.txt  client.c  user.c
client/admin/: admin.c
client/gui/: admin_shell.c  admin_shell.h  gui.c  user_shell.c  user_shell.h
client/python_client/: python_gui.py  python_user.py
client/user/: user.c
client/user/arg_parser/: arg_parser.c  arg_parser.h
common_types/: common_types.h
lib-src/: CMakeLists.txt
lib-src/my_io/: CMakeLists.txt  my_io.c  my_io.h
server/: CMakeLists.txt  main  main.cpp  server.cpp
server/my_timer/: my_timer.cpp  my_timer.hpp
server/processing/: processing.cpp  processing.hpp
server/processing/blur/: blur.cpp  blur.hpp
server/processing/downscale/: downscale.cpp  downscale.hpp
server/processing/upscale/: upscale.cpp  upscale.hpp
server/sig_handler/: sig_handler.cpp  sig_handler.hpp
server/tcp_handler/: tcp_handler.cpp  tcp_handler.hpp
server/udp_handler/: udp_handler.cpp  udp_handler.hpp
